// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot, state derived from props, DISCONNECTED 1`] = `
<div
  className="sc-kjoXOD sc-cHGsZl bzMndt"
>
  <div
    className="sc-eqIVtm sc-kgAjT iukmTY spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-gisBJw fixKCf"
      >
        <div
          className="sc-dVhcbM fFZIqx"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="sc-fMiknA hNiKui"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="sc-cMljjf hkZocT"
      >
        <button
          className="sc-EHOje ISMxz"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG cxjlMm"
        >
          <i
            aria-hidden="true"
            className="sc-jTzLTM gkTtVL fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-fjdhpX flAxeK"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="sc-jTzLTM TMXdn fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-EHOje ISMxz"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-cJSrbW dZfIuu"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ canRequest 1`] = `
<div
  className="sc-kjoXOD sc-cHGsZl bzMndt"
>
  <div
    className="sc-eqIVtm sc-kgAjT iukmTY spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-gisBJw fixKCf"
      >
        <div
          className="sc-dVhcbM fFZIqx"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="sc-fMiknA hNiKui"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="sc-cMljjf hkZocT"
      >
        <div
          className="sc-jAaTju eobcqR"
          data-qa="price-controls__price-button-disabled"
        >
          <i
            className="sc-jDwBTQ dBQkTU fas fa-ban fa-flip-horizontal"
          />
          Streaming price unavailable
        </div>
        <div
          className="sc-jzJRlG cxjlMm"
        >
          <i
            aria-hidden="true"
            className="sc-jTzLTM gkTtVL fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-fjdhpX flAxeK"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="sc-jTzLTM hIDkxN fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="sc-iRbamj kalpzL"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="sc-jlyJG jbEnWN"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="sc-gipzik eFroXM"
              data-qa="tile-booking__booking-status"
            >
              Initiate RFQ
            </span>
          </div>
        </div>
        <div
          className="sc-jAaTju eobcqR"
          data-qa="price-controls__price-button-disabled"
        >
          <i
            className="sc-jDwBTQ dBQkTU fas fa-ban fa-flip-horizontal"
          />
          Streaming price unavailable
        </div>
      </div>
    </div>
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-cJSrbW dZfIuu"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb fauXdE"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ expired 1`] = `
<div
  className="sc-kjoXOD sc-cHGsZl bzMndt"
>
  <div
    className="sc-eqIVtm sc-kgAjT iukmTY spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-gisBJw fixKCf"
      >
        <div
          className="sc-dVhcbM fFZIqx"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="sc-fMiknA hNiKui"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="sc-cMljjf hkZocT"
      >
        <button
          className="sc-EHOje ISMxz"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="sc-VigVT jYMuao"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
        <div
          className="sc-jzJRlG cxjlMm"
        >
          <i
            aria-hidden="true"
            className="sc-jTzLTM gkTtVL fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-fjdhpX flAxeK"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="sc-jTzLTM hIDkxN fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="sc-iRbamj kalpzL"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="sc-jlyJG jbEnWN"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="sc-gipzik eFroXM"
              data-qa="tile-booking__booking-status"
            >
              Requote
            </span>
          </div>
        </div>
        <button
          className="sc-EHOje ISMxz"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
          <div
            className="sc-VigVT jYMuao"
            data-qa="price-button__expired"
          >
            Expired
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-cJSrbW dZfIuu"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb fauXdE"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ received 1`] = `
<div
  className="sc-kjoXOD sc-cHGsZl bzMndt"
>
  <div
    className="sc-eqIVtm sc-kgAjT iukmTY spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-gisBJw fixKCf"
      >
        <div
          className="sc-dVhcbM fFZIqx"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="sc-fMiknA hNiKui"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="sc-cMljjf hkZocT"
      >
        <button
          className="sc-EHOje dMrstF"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG cxjlMm"
        >
          <i
            aria-hidden="true"
            className="sc-jTzLTM gkTtVL fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-fjdhpX flAxeK"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="sc-jTzLTM hIDkxN fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-EHOje iNOQDN"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-cJSrbW dZfIuu"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, RFQ requested 1`] = `
<div
  className="sc-kjoXOD sc-cHGsZl bzMndt"
>
  <div
    className="sc-eqIVtm sc-kgAjT iukmTY spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-gisBJw fixKCf"
      >
        <div
          className="sc-dVhcbM fFZIqx"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="sc-fMiknA hNiKui"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="sc-cMljjf hkZocT"
      >
        <div
          className="sc-jAaTju eobcqR"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="sc-gPEVay ScvMT"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="sc-jKJlTe dSCVMx"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="sc-jKJlTe liUgNR"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="sc-jKJlTe feRRie"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="sc-jKJlTe bxfSfv"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
        <div
          className="sc-jzJRlG cxjlMm"
        >
          <i
            aria-hidden="true"
            className="sc-jTzLTM gkTtVL fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-fjdhpX flAxeK"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="sc-jTzLTM hIDkxN fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="sc-iRbamj kalpzL"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="sc-jlyJG gZYAjX"
            color="red"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="sc-gipzik eFroXM"
              data-qa="tile-booking__booking-status"
            >
              Cancel RFQ
            </span>
          </div>
        </div>
        <div
          className="sc-jAaTju eobcqR"
          data-qa="price-controls__price-button-disabled--loading"
        >
          <div
            className="sc-gPEVay ScvMT"
          >
            <svg
              data-qa="adaptive-loader__svg"
              height={14}
              width={14}
            >
              <rect
                className="sc-jKJlTe dSCVMx"
                height={10.5}
                order={0}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={0.25}
              />
              <rect
                className="sc-jKJlTe liUgNR"
                height={10.5}
                order={1}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={3.875}
              />
              <rect
                className="sc-jKJlTe feRRie"
                height={10.5}
                order={2}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={7.5}
              />
              <rect
                className="sc-jKJlTe bxfSfv"
                height={10.5}
                order={3}
                speed={0.8}
                type="secondary"
                width={2.625}
                x={11.125}
              />
            </svg>
          </div>
          Awaiting price
        </div>
      </div>
    </div>
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-cJSrbW dZfIuu"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, defaults, RFQ none, should be able to excute 1`] = `
<div
  className="sc-kjoXOD sc-cHGsZl bzMndt"
>
  <div
    className="sc-eqIVtm sc-kgAjT iukmTY spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-gisBJw fixKCf"
      >
        <div
          className="sc-dVhcbM fFZIqx"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="sc-fMiknA hNiKui"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="sc-cMljjf hkZocT"
      >
        <button
          className="sc-EHOje dBRWIy"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG cxjlMm"
        >
          <i
            aria-hidden="true"
            className="sc-jTzLTM gkTtVL fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-fjdhpX flAxeK"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="sc-jTzLTM TMXdn fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <button
          className="sc-EHOje eLhfpu"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi crpdKd"
            disabled={false}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-cJSrbW dZfIuu"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb fauXdE"
            data-qa-id="notional-input__input-eurusd"
            disabled={false}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot, state derived from props, in trade 1`] = `
<div
  className="sc-kjoXOD sc-cHGsZl bzMndt"
>
  <div
    className="sc-eqIVtm sc-kgAjT iukmTY spot-tile"
    data-qa="spot-tile__tile"
    data-qa-id="currency-pair-eurusd"
  >
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-gisBJw fixKCf"
      >
        <div
          className="sc-dVhcbM fFZIqx"
          data-qa="tile-header__tile-symbol"
        >
          EUR/USD
        </div>
        <div
          className="sc-fMiknA hNiKui"
          data-qa="tile-header__delivery-date"
        >
          SPT (07 APR)
        </div>
      </div>
      <div
        className="sc-cMljjf hkZocT"
      >
        <button
          className="sc-EHOje ISMxz"
          data-qa="price-button__trade-button"
          data-qa-id="direction-sell-eurusd"
          direction="Sell"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                SELL
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
        <div
          className="sc-jzJRlG cxjlMm"
        >
          <i
            aria-hidden="true"
            className="sc-jTzLTM gkTtVL fas fa-caret-up"
            color="green"
            data-qa="price-movement__movement-icon--up"
          />
          <div
            className="sc-fjdhpX flAxeK"
            data-qa="price-movement__movement-value"
          >
            0.0
          </div>
          <i
            aria-hidden="true"
            className="sc-jTzLTM hIDkxN fas fa-caret-down"
            color="red"
            data-qa="price-movement__movement-icon--down"
          />
        </div>
        <div
          className="sc-iRbamj kalpzL"
          style={
            Object {
              "opacity": 0,
            }
          }
        >
          <div
            className="sc-jlyJG jeNLbj"
            color="blue"
            data-qa="tile-booking__booking-pill"
            disabled={false}
            onClick={[Function]}
          >
            <span
              className="sc-csuQGl hogrVX"
            >
              <svg
                data-qa="adaptive-loader__svg"
                height={14}
                width={14}
              >
                <rect
                  className="sc-jKJlTe dSCVMx"
                  height={10.5}
                  order={0}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={0.25}
                />
                <rect
                  className="sc-jKJlTe liUgNR"
                  height={10.5}
                  order={1}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={3.875}
                />
                <rect
                  className="sc-jKJlTe feRRie"
                  height={10.5}
                  order={2}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={7.5}
                />
                <rect
                  className="sc-jKJlTe bxfSfv"
                  height={10.5}
                  order={3}
                  speed={0.8}
                  type="secondary"
                  width={2.625}
                  x={11.125}
                />
              </svg>
            </span>
            <span
              className="sc-gipzik ewUEuG"
              data-qa="tile-booking__booking-status"
            >
              Executing
            </span>
          </div>
        </div>
        <button
          className="sc-EHOje ISMxz"
          data-qa="price-button__trade-button"
          data-qa-id="direction-buy-eurusd"
          direction="Buy"
          disabled={true}
          onClick={[Function]}
        >
          <div
            className="sc-gZMcBi egNMcT"
            disabled={true}
          >
            <div
              className="sc-gqjmRU cKkifn"
            >
              <div
                className="sc-bZQynM sc-gzVnrw lDSPw"
              >
                BUY
              </div>
              <div
                className="sc-bZQynM sc-htoDjs duRaET"
                data-qa="price-button__big"
              >
                1.
              </div>
            </div>
            <div
              className="sc-bZQynM sc-dnqmqq fBMQfa"
              data-qa="price-button__pip"
            >
              48
            </div>
            <div
              className="sc-bZQynM sc-iwsKbI CPNEg"
              data-qa="price-button__tenth"
            >
              4
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="sc-TOsTZ kjYrri"
    >
      <div
        className="sc-cJSrbW dZfIuu"
      >
        <div
          className="sc-htpNat idZgat"
        >
          <span
            className="sc-bdVaJa bxrsSL"
            data-qa="notional-input__currency-pair-symbol"
          >
            EUR
          </span>
          <input
            className="sc-bxivhb ixCVbX"
            data-qa-id="notional-input__input-eurusd"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="1,000,000"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
